# Standard library imports - v3.11+
import uuid
import logging
from datetime import datetime, timezone
from typing import Dict, Optional, Tuple

# Third-party imports
from circuitbreaker import circuit, CircuitBreakerError  # v1.4.0
from tenacity import retry, stop_after_attempt, wait_exponential  # v8.2.0
from boto3 import client as boto3_client  # v1.26.0
from botocore.exceptions import ClientError  # v1.26.0

# Internal imports
from models.document import Document
from shared.proto.document_pb2 import DocumentType, ProcessingStatus

class DocumentService:
    """
    Enhanced service class for secure, HIPAA-compliant document operations with AI integration.
    Handles document upload, processing, and analysis with comprehensive security and compliance features.
    """

    def __init__(self, config: Dict):
        """
        Initialize document service with security and compliance configurations.
        
        Args:
            config: Service configuration dictionary containing:
                - s3_bucket: S3 bucket name for document storage
                - aws_region: AWS region for S3
                - encryption_key_id: KMS key ID for encryption
                - max_file_size: Maximum allowed file size in bytes
                - allowed_mime_types: List of allowed MIME types
        """
        # Configure structured logging
        self._logger = logging.getLogger(__name__)
        self._logger.setLevel(logging.INFO)

        # Store configuration
        self._config = config
        self._validate_config()

        # Initialize S3 client with encryption
        self._s3_client = boto3_client(
            's3',
            region_name=config['aws_region'],
            config=boto3.Config(
                retries={'max_attempts': 3},
                connect_timeout=5,
                read_timeout=10
            )
        )

        # Initialize metrics and monitoring
        self._init_metrics()

    def _validate_config(self):
        """Validate service configuration parameters."""
        required_keys = {
            's3_bucket', 'aws_region', 'encryption_key_id',
            'max_file_size', 'allowed_mime_types'
        }
        if not all(key in self._config for key in required_keys):
            raise ValueError("Missing required configuration parameters")

    def _init_metrics(self):
        """Initialize service metrics and monitoring."""
        self._metrics = {
            'upload_success': 0,
            'upload_failures': 0,
            'processing_time': [],
            'ai_analysis_success': 0,
            'ai_analysis_failures': 0
        }

    @circuit(failure_threshold=5, recovery_timeout=60)
    @retry(
        stop=stop_after_attempt(3),
        wait=wait_exponential(multiplier=1, min=4, max=10)
    )
    async def upload_document(
        self,
        file_content: bytes,
        file_name: str,
        authorization_id: str,
        uploaded_by: str,
        document_type: DocumentType = DocumentType.OTHER
    ) -> Tuple[Document, bool]:
        """
        Securely upload and process a document with encryption and validation.

        Args:
            file_content: Document binary content
            file_name: Original file name
            authorization_id: Associated authorization request ID
            uploaded_by: User ID of uploader
            document_type: Type of clinical document

        Returns:
            Tuple[Document, bool]: Created document record and success status

        Raises:
            ValueError: For validation failures
            CircuitBreakerError: When service is degraded
            ClientError: For S3 operation failures
        """
        try:
            # Validate input parameters
            self._validate_upload_params(
                file_content, file_name, authorization_id, uploaded_by
            )

            # Generate secure document ID and S3 key
            document_id = str(uuid.uuid4())
            s3_key = f"documents/{authorization_id}/{document_id}/{file_name}"

            # Calculate file hash and metadata
            file_hash, mime_type = self._process_file_metadata(file_content)

            # Upload to S3 with encryption
            s3_response = await self._upload_to_s3(
                file_content,
                s3_key,
                mime_type
            )

            # Create document record
            document = Document(
                document_id=document_id,
                authorization_id=authorization_id,
                metadata={
                    'mime_type': mime_type,
                    'filename': file_name,
                    'size_bytes': len(file_content),
                    'hash': file_hash
                },
                content_location=s3_key,
                document_type=document_type,
                processing_status=ProcessingStatus.PENDING,
                uploaded_by=uploaded_by,
                encryption_key_id=self._config['encryption_key_id']
            )
            
            # Save document with audit trail
            document.audit_trail.append({
                'timestamp': datetime.now(timezone.utc).isoformat(),
                'action': 'document_upload',
                'user_id': uploaded_by,
                'status': 'success'
            })
            document.save()

            # Update metrics
            self._metrics['upload_success'] += 1

            self._logger.info(
                "Document uploaded successfully",
                extra={
                    'document_id': document_id,
                    'authorization_id': authorization_id,
                    'size_bytes': len(file_content)
                }
            )

            return document, True

        except Exception as e:
            self._metrics['upload_failures'] += 1
            self._logger.error(
                "Document upload failed",
                extra={
                    'error': str(e),
                    'authorization_id': authorization_id
                }
            )
            raise

    @circuit(failure_threshold=3, recovery_timeout=30)
    async def update_ai_analysis(
        self,
        document_id: str,
        analysis_results: Dict,
        validation_info: Optional[Dict] = None
    ) -> Tuple[Document, bool]:
        """
        Update document with validated AI analysis results.

        Args:
            document_id: Document identifier
            analysis_results: AI processing results
            validation_info: Optional validation metadata

        Returns:
            Tuple[Document, bool]: Updated document and success status

        Raises:
            ValueError: For invalid analysis results
            DocumentNotFoundError: When document doesn't exist
        """
        try:
            # Retrieve document
            document = Document.objects.get(document_id=document_id)

            # Validate analysis results
            self._validate_analysis_results(analysis_results)

            # Update document with analysis results
            success = document.update_ai_analysis(
                analysis_results,
                validation_info or {}
            )

            if success:
                # Update processing status
                document.update_processing_status(
                    ProcessingStatus.COMPLETED,
                    {
                        'user_id': 'system',
                        'reason': 'AI analysis completed'
                    }
                )

                self._metrics['ai_analysis_success'] += 1
                self._logger.info(
                    "AI analysis updated successfully",
                    extra={
                        'document_id': document_id,
                        'confidence_score': analysis_results.get('confidence_score')
                    }
                )
            else:
                self._metrics['ai_analysis_failures'] += 1
                self._logger.error(
                    "Failed to update AI analysis",
                    extra={'document_id': document_id}
                )

            return document, success

        except Exception as e:
            self._metrics['ai_analysis_failures'] += 1
            self._logger.error(
                "AI analysis update failed",
                extra={
                    'error': str(e),
                    'document_id': document_id
                }
            )
            raise

    async def _upload_to_s3(
        self,
        file_content: bytes,
        s3_key: str,
        mime_type: str
    ) -> Dict:
        """
        Upload file to S3 with encryption and security headers.

        Args:
            file_content: File binary content
            s3_key: S3 object key
            mime_type: File MIME type

        Returns:
            Dict: S3 upload response

        Raises:
            ClientError: For S3 operation failures
        """
        try:
            response = await self._s3_client.put_object(
                Bucket=self._config['s3_bucket'],
                Key=s3_key,
                Body=file_content,
                ContentType=mime_type,
                ServerSideEncryption='aws:kms',
                SSEKMSKeyId=self._config['encryption_key_id'],
                Metadata={
                    'upload-time': datetime.now(timezone.utc).isoformat(),
                    'content-hash': self._calculate_hash(file_content)
                }
            )
            return response

        except ClientError as e:
            self._logger.error(
                "S3 upload failed",
                extra={
                    'error': str(e),
                    's3_key': s3_key
                }
            )
            raise

    def _validate_upload_params(
        self,
        file_content: bytes,
        file_name: str,
        authorization_id: str,
        uploaded_by: str
    ):
        """Validate upload parameters and enforce security policies."""
        if not all([file_content, file_name, authorization_id, uploaded_by]):
            raise ValueError("Missing required parameters")

        if len(file_content) > self._config['max_file_size']:
            raise ValueError("File exceeds maximum size limit")

        mime_type = self._get_mime_type(file_content)
        if mime_type not in self._config['allowed_mime_types']:
            raise ValueError("Unsupported file type")

    def _validate_analysis_results(self, analysis_results: Dict):
        """Validate AI analysis results schema and content."""
        required_fields = {
            'confidence_score',
            'extracted_fields',
            'analysis_version'
        }
        if not all(field in analysis_results for field in required_fields):
            raise ValueError("Missing required AI analysis fields")

        if not 0 <= analysis_results['confidence_score'] <= 1:
            raise ValueError("Invalid confidence score")

    def _process_file_metadata(
        self,
        file_content: bytes
    ) -> Tuple[str, str]:
        """
        Process file metadata including hash calculation and MIME type detection.

        Args:
            file_content: File binary content

        Returns:
            Tuple[str, str]: File hash and MIME type
        """
        import hashlib
        import magic  # python-magic v0.4.27

        file_hash = hashlib.sha256(file_content).hexdigest()
        mime_type = magic.from_buffer(file_content, mime=True)

        return file_hash, mime_type

    def _calculate_hash(self, content: bytes) -> str:
        """Calculate secure hash of content."""
        import hashlib
        return hashlib.sha256(content).hexdigest()

    def _get_mime_type(self, content: bytes) -> str:
        """Detect MIME type from file content."""
        import magic
        return magic.from_buffer(content, mime=True)